Fix margin around nav search box on Safari

--- a/frontend/scss/_header.scss
+++ b/frontend/scss/_header.scss
@@ -36,6 +36,7 @@
 		        appearance: none;
 		
 		border: 0;
+		margin: 0;
 		padding: 0.45em;
 		width: 100%;
 		font-size: scale(1);
